# AulaForge

./: .gitignore  CONFIG_EXAMPLE.yaml  FIRST_PROMPT_CLAUDE_CODE.md  HANDOFF_FASE3.md  HANDOFF_FASE4.md  HANDOFF_FASE5.md  HANDOFF_FASE6.md  HANDOFF_FASE7.md  HANDOFF_FASE8.md  HANDOFF_FASE9.md  PRD.md  PROJECT_TREE.md  QUICKSTART.md  README.md  pyproject.toml
.claude/: CLAUDE.md  settings.json
.claude/agents/: audio-video-merge-engineer.md  aulaforge-product-architect.md  docs-knowledge-engineer.md  notion-mcp-integrator.md  ocr-video-engineer.md  ollama-prompt-engineer.md  python-cli-engineer.md  qa-automation-engineer.md  transcription-whisper-engineer.md
.claude/checklists/: DEVELOPMENT_BEST_PRACTICES.md
.claude/commands/: aulaforge-phase-1.md  aulaforge-plan.md  aulaforge-qa.md
.claude/docs/: ARCHITECTURE.md  DATA_CONTRACTS.md  ERROR_HANDLING_AND_CHECKPOINTS.md  FILE_READING_ORDER.md  IMPLEMENTATION_PLAN.md  LOCAL_STORAGE_STRUCTURE.md  MCP_SETUP.md  NOTION_DATABASE_SCHEMA.md  NOTION_PAGE_TEMPLATE.md  OCR_STRATEGY.md  PHASE_CHECKLISTS.md  PIPELINE.md  QUALITY_ASSURANCE.md  ROADMAP.md  TECH_STACK.md  TRANSCRIPTION_STRATEGY.md
.claude/hooks/: block-secrets.sh
.claude/prompts/: 00_MASTER_PROMPT_CLAUDE_CODE.md  01_PHASE_1_FOUNDATION.md  (+9 more)
tests/: conftest.py  test_audio.py  test_checkpoints.py  test_chunking.py  test_cli.py  test_config.py  test_discovery.py  test_logging_setup.py  test_merge.py  test_notes.py  test_notion.py  test_notion_client.py  test_ocr.py  test_ollama_client.py  test_outputs.py  test_reports.py  test_transcription.py  test_video_frames.py
(+28 files in other folders)
