[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aulaforge"
version = "0.1.0"
description = "Local-first course video processor for transcription, OCR, Notion notes, Claude Code and Codex outputs."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Diogo B" }
]
dependencies = [
  "typer>=0.12.0",
  "rich>=13.7.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.2.0",
  "pyyaml>=6.0.1",
  "python-slugify>=8.0.4",
  "ffmpeg-python>=0.2.0",
  "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.5.0",
  "mypy>=1.10.0",
  "types-PyYAML>=6.0.12",
]
transcription = [
  "openai-whisper>=20231117",
]
ocr = [
  "pillow>=10.3.0",
  "opencv-python>=4.10.0.84",
  "pytesseract>=0.3.10",
]

[project.scripts]
aulaforge = "aulaforge.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/aulaforge"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["ffmpeg.*", "whisper.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["pytesseract.*", "cv2.*", "PIL.*"]
ignore_missing_imports = true
